--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <img src="./img/logo.png" alt="">
+        </li>
+        <li>
+            <img src="./img/avatar.png" alt="">
+        </li>
+    </ul>
+    <video src="video/stranger-things(1).mp4" autoplay muted></video>
+
+    <img src="img/abyss.jpg" alt="">
+    <img src="img/f1.jpg" alt="">
+    <img src="img/chokehold.jpg" alt="">
+    <img src="img/hunter.jpg" alt="">
+    
     
 </body>
 </html>
